protect against nullpointer after dispose on Jaguar